--- a/Task_template.html
+++ b/Task_template.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Tast_template.css">
 </head>
 <body>
+    <!-- Header section -->
     <header>
         <div class="logo">
             <img src="./Assets/Images/what-is-rolling-release-linux-distro.jpg" alt="logo">
@@ -15,5 +16,18 @@
             E-Linux
         </div>
     </header>
+
+    <!-- Section 1 -->
+     <div class="image-text-container">
+        <img src="./Assets/Images/cli_example.png" alt="shadow" class="shadow">
+        <div class="section1_text">
+            <span class="bold">E-Linux </span>  helps you bring a comprehensive experience in conducting Devops operations. E-linux is a free & Open-Source Operating System.
+        </div>
+     </div>
+
+     <!-- section 2 -->
+      <div class="class conatiner">
+        <div class="card"></div>
+      </div>
 </body>
 </html>
