--- a/Task_template.html
+++ b/Task_template.html
@@ -62,9 +62,69 @@
             </div>
         </div>
         <div class="section3-text">
-            Hi
+            <h1 class="title">From Developers to the Developers</h1>
+            <p class="description">
+                Our mission is to fullfill the developers needs and make the workflow lot easier and cost effective
+            </p>
         </div>
-     </div>
-
+    </div>
+  <!-- section 4 -->
+<div class="section4-container">
+    <div class="section4-text">
+        <h1 class="title">Our Desktop Evironments</h1>
+        <p class="description">
+           Gnome . Xfce . KDE Plama . LXQT
+        </p>
+    </div>
+    <div class="section4-table">
+        <table class="image-table">
+            <tr>
+                <td><img src="./Assets/Images/gnome.jpeg" alt="Image 1"></td>
+                <td><img src="./Assets/Images/eXBLjJF.jpg" alt="Image 2"></td>
+            </tr>
+            <tr>
+                <td><img src="./Assets/Images/plasma-screen-desktop-2-shadow.png" alt="Image 3"></td>
+                <td><img src="./Assets/Images/Screen-Shot-2014-05-06-at-18.05.jpg" alt="Image 4"></td>
+            </tr>
+        </table>
+    </div>
+</div>
+<!-- section 5 -->
+<div class="section5-container">
+    <div class="section5-text">
+        <h1 class="title">Our Services</h1>
+        <p class="description">
+            We are dedicated to providing essential development tools like API's, Devops Tools, IDE's, Networking Tools
+        </p>
+    </div>
+</div>
+ <!-- section 6 -->
+ <div class="section6-container">
+    <!-- Card 1 -->
+    <div class="card">
+        <img src="./Assets/Images/docker.png" alt="Cloud Operation" class="card-image">
+        <div class="card-text">
+            <h3>Docker</h3>
+            <p>Image creation . Containerization . Excecution </p>
+        </div>
+    </div>
+    <!-- Card 2 -->
+    <div class="card">
+        <img src="./Assets/Images/codium.jpg" alt="Enterprise Cost Cutting" class="card-image">
+        <div class="card-text">
+            <h3>VScodium</h3>
+            <p>Non-Microsoft VS Code</p>
+        </div>
+    </div>
+    <!-- Card 3 -->
+    <div class="card">
+        <img src="./Assets/Images/iftop.png" alt="Security" class="card-image">
+        <div class="card-text">
+            <h3>iftop</h3>
+            <p>Network monitoring tool</p>
+        </div>
+    </div>
+</div>
+     
 </body>
 </html>
